--- a/src/style.css
+++ b/src/style.css
@@ -11,3 +11,206 @@ p {
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+
+/* Header Styles */
+.header {
+  background-color: white;
+  color: white;
+  padding: 4rem 0;
+  text-align: center;
+}
+
+.header-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.header-image {
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  margin-bottom: 1rem;
+}
+
+.header-title {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: rgb(58, 58, 58);
+  margin-bottom: 1rem;
+}
+
+.header-subtitle {
+  font-size: 1.5rem;
+  color: rgb(58, 58, 58);
+  animation: fadeSubtitle 3s infinite;
+}
+
+@keyframes fadeSubtitle {
+  0%, 100% {
+    opacity: 0;
+  }
+  25%, 75% {
+    opacity: 1;
+  }
+}
+
+/* Mobile Styles */
+@media screen and (max-width: 768px) {
+  .header-title {
+    font-size: 2rem;
+  }
+
+  .header-subtitle {
+    font-size: 1.25rem;
+  }
+
+  .header-image {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 0.5rem;
+  }
+}
+
+
+
+/*About */
+.about-section {
+  padding: 2rem 0;
+  background-color: #183D3D;
+}
+
+.about-title {
+  font-size: 1.25rem;
+  font-weight: bold;
+  text-align: center;
+  color: #f2f2f2;
+  margin-bottom: 1rem;
+}
+
+.about-description {
+  font-size: 1rem;
+  color: #f2f2f2;
+}
+
+/* project */
+.projects-section {
+  padding: 2rem 0;
+  background-color: #f2f2f2;
+}
+
+.projects-title {
+  font-size: 1.25rem;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.project-card-container {
+  display: grid;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+  gap: 1rem;
+}
+
+/* .project-card */
+.project-card {
+  background-color: #183D3D;
+  border-radius: 0.25rem;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+
+.project-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #f2f2f2;
+  margin-bottom: 0.5rem;
+}
+
+.project-description {
+  color: #040D12;
+  margin-bottom: 1rem;
+}
+
+.project-link {
+  color: #3498db;
+  text-decoration: none;
+}
+
+.project-link:hover {
+  text-decoration: underline;
+}
+
+/* testimonials */
+.testimonials-section {
+  padding: 2rem 0;
+  background-color: #5C8374;
+}
+
+.testimonials-title {
+  font-size: 1.25rem;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.testimonial-card {
+  background-color: white;
+  border-radius: 0.25rem;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+
+.testimonial-content {
+  color: #666;
+  margin-bottom: 1rem;
+}
+
+.testimonial-name {
+  font-weight: bold;
+}
+
+/* contact */
+.contact-section {
+  padding: 2rem 0;
+  background-color: #f2f2f2;
+}
+
+.contact-title {
+  font-size: 1.25rem;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.contact-description {
+  margin-bottom: 1rem;
+}
+
+.contact-link {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  background-color: #183D3D;
+  color: white;
+  border-radius: 0.25rem;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  text-decoration: none;
+  transition: background-color 0.3s;
+}
+
+.contact-link:hover {
+  background-color: #5C8374;
+}
+
+
+/* footer */
+.footer {
+  background-color: #93B1A6;
+  color: white;
+  padding: 1rem 0;
+  text-align: center;
+}
