--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,6 @@ p {
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-
 /* Header Styles */
 .header {
   background-color: white;
@@ -49,10 +48,12 @@ p {
 }
 
 @keyframes fadeSubtitle {
-  0%, 100% {
+  0%,
+  100% {
     opacity: 0;
   }
-  25%, 75% {
+  25%,
+  75% {
     opacity: 1;
   }
 }
@@ -74,16 +75,14 @@ p {
   }
 }
 
-
-
 /*About */
 .about-section {
   padding: 2rem 0;
-  background-color: #183D3D;
+  background-color: #183d3d;
 }
 
 .about-title {
-  font-size: 1.25rem;
+  font-size: 1.75rem;
   font-weight: bold;
   text-align: center;
   color: #f2f2f2;
@@ -102,7 +101,7 @@ p {
 }
 
 .projects-title {
-  font-size: 1.25rem;
+  font-size: 1.75rem;
   font-weight: bold;
   text-align: center;
   margin-bottom: 1rem;
@@ -116,23 +115,25 @@ p {
 
 /* .project-card */
 .project-card {
-  background-color: #183D3D;
-  border-radius: 0.25rem;
+  background-color: #183d3d;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 1rem;
-  margin-bottom: 1rem;
+  display: flex;
+  border: 1px solid #ccc;
+  padding: 16px;
+  margin-bottom: 16px;
+  border-radius: 8px;
 }
 
 .project-title {
-  font-size: 1.5rem;
   font-weight: bold;
   color: #f2f2f2;
-  margin-bottom: 0.5rem;
+  font-size: 1.25rem;
+  margin-bottom: 8px;
 }
 
 .project-description {
-  color: #040D12;
-  margin-bottom: 1rem;
+  color: #040d12;
+  margin-bottom: 8px;
 }
 
 .project-link {
@@ -144,17 +145,56 @@ p {
   text-decoration: underline;
 }
 
-/* testimonials */
-.testimonials-section {
-  padding: 2rem 0;
-  background-color: #5C8374;
+
+.project-image {
+  flex: 0 0 100px;
+  margin-right: 16px;
+  overflow: hidden;
+  border-radius: 4px;
 }
 
+.project-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.project-details {
+  flex: 1;
+}
+
+/* testimonials.css */
+
+
+.testimonials-section {
+  padding: 2rem 0;
+  background-color: #5c8374;
+}
+
+
 .testimonials-title {
-  font-size: 1.25rem;
+  font-size: 1.75rem;
   font-weight: bold;
   text-align: center;
   margin-bottom: 1rem;
+  color: white;
+}
+
+
+.testimonial-cards-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 1rem;
+}
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .testimonial-card {
@@ -163,15 +203,32 @@ p {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   padding: 1rem;
   margin-bottom: 1rem;
+  animation: fadeInUp 0.5s ease-in-out forwards;
 }
 
-.testimonial-content {
+
+.testimonial-content p {
   color: #666;
   margin-bottom: 1rem;
 }
 
+
+.testimonial-info {
+  display: flex;
+  align-items: center;
+}
+
+.testimonial-info img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 1rem;
+}
+
 .testimonial-name {
   font-weight: bold;
+  color: #333;
 }
 
 /* contact */
@@ -181,7 +238,7 @@ p {
 }
 
 .contact-title {
-  font-size: 1.25rem;
+  font-size: 1.75rem;
   text-align: center;
   font-weight: bold;
   margin-bottom: 1rem;
@@ -194,22 +251,21 @@ p {
 .contact-link {
   display: inline-block;
   padding: 0.5rem 1rem;
-  background-color: #183D3D;
+  background-color: #183d3d;
   color: white;
   border-radius: 0.25rem;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   text-decoration: none;
-  transition: background-color 0.3s;
+  /* transition: background-color 0.3s; */
 }
 
 .contact-link:hover {
-  background-color: #5C8374;
+  background-color: #5c8374;
 }
-
 
 /* footer */
 .footer {
-  background-color: #93B1A6;
+  background-color: #93b1a6;
   color: white;
   padding: 1rem 0;
   text-align: center;
