--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,6 +1,6 @@
 /* navbar.css */
 .navbar {
-  background: #040D12;
+  background: #040d12;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,12 +19,95 @@
 
 .navbar-link {
   text-decoration: none;
-  color:#183D3D;
+  color: #183d3d;
   font-size: 12px;
   font-weight: bold;
   transition: color 0.3s;
 }
 
 .navbar-link:hover {
-  color: #5C8374;
+  color: #5c8374;
+}
+.menu-toggle {
+  display: none;
+  background: none;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .navbar {
+    position: relative;
+  }
+
+  .menu-toggle {
+    display: none;
+    background: none;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+  }
+
+  .menu-toggle.active {
+    display: block; 
+  }
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.3);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s;
+  }
+
+  .overlay.active {
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  .navbar-drawer {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    height: 100vh;
+    width: 70%; 
+    background: #040D12;
+    box-shadow: -2px 0px 4px rgba(0, 0, 0, 0.1);
+    transition: right 0.3s;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; 
+  }
+
+  .navbar-drawer.open {
+    right: 0;
+  }
+
+  .navbar-list {
+    display: none;
+  }
+
+  .navbar-item {
+    width: 100%;
+    text-align: center;
+  }
+
+  .navbar-link {
+    text-decoration: none;
+    color: #183D3D;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 10px 0;
+  }
+
+  .navbar-link:hover {
+    color: #5C8374;
+  }
 }
